adding the fonts

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "satoshi";
-	src: url(/Fonts/Variable/Satoshi-Variable.ttf);
+	src: url(./Fonts/Variable/Satoshi-Variable.ttf);
 }
 
 *{
