--- a/style.css
+++ b/style.css
@@ -11,8 +11,14 @@
 }
 
 .container {
-  max-width: 1380px;
-  margin: auto 1rem;
+  margin: auto 38px;
+  max-width: 1364px;
+}
+
+@media (min-width: 1364px) {
+  .container {
+    margin: 0  auto;
+  }
 }
 
 .dark_bg {
@@ -63,7 +69,7 @@ body nav .nav_btn {
 
 body main .banner {
   background-color: #E8E7EE;
-  height: 463px;
+  min-height: 463px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -108,10 +114,10 @@ body .questions {
 }
 
 body .questions .question {
+  margin-top: 1px;
   background: #F3F5F7;
-  height: 348px;
+  min-height: 348px;
   border-radius: 10px;
-  border-top: 1px solid #000000;
   padding: 35px 29px;
 }
 
@@ -120,6 +126,7 @@ body .questions .question h2 {
   font-weight: 900;
   line-height: 54px;
   letter-spacing: 0em;
+  margin-bottom: 13px;
 }
 
 body .questions .question p {
@@ -142,7 +149,12 @@ body .questions .right {
   border-right: 1px solid #000000;
 }
 
+body .questions :nth-child(5) {
+  margin-bottom: 1px;
+}
+
 body .questions :nth-child(6) {
+  margin-bottom: 1px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
