--- a/style.scss
+++ b/style.scss
@@ -11,8 +11,14 @@
 
 
 .container{
-	max-width: 1380px;
-	margin:  auto 1rem;
+	margin:  auto 38px;
+	max-width: 1364px;
+}
+
+@media (min-width: 1364px) {
+	.container{
+		margin: 0  auto ;
+	}
 }
 
 .dark_bg{
@@ -58,7 +64,7 @@ body{
 	main{
 		.banner{
 			background-color: #E8E7EE;
-			height: 463px;
+			min-height: 463px;
 			// width: 1364px;
 			display: flex;
 			flex-direction: column;
@@ -90,12 +96,12 @@ body{
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows:repeat(3, 1fr);
-		// gap: .5px;
 		.question{
+			margin-top: 1px;
 			background: #F3F5F7;
-			height: 348px;
+			min-height: 348px;
 			border-radius: 10px;
-			border-top: 1px solid #000000;
+			// border-top: 1px solid #000000;
 			// border-bottom: 0.5px solid #000000;
 			padding:  35px 29px;
 			h2{
@@ -103,6 +109,7 @@ body{
 				font-weight: 900;
 				line-height: 54px;
 				letter-spacing: 0em;
+				margin-bottom: 13px;
 			}
 			p{
 				font-style: normal;
@@ -122,7 +129,11 @@ body{
 		.right{
 			border-right: 1px solid #000000;
 		}
+		:nth-child(5){
+			margin-bottom: 1px;
+		}
 		:nth-child(6){
+			margin-bottom: 1px;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
