--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "satoshi";
-  src: url(./Fonts/Variable/Satoshi-Variable.ttf);
+  src: url(../Fonts/Variable/Satoshi-Variable.ttf);
 }
 
 * {
@@ -8,6 +8,21 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: #E8E7EE;
+}
+
+button {
+  cursor: pointer;
+  -webkit-transition: scale 200ms ease-in-out;
+  transition: scale 200ms ease-in-out;
+}
+
+button:hover {
+  scale: 1.1;
 }
 
 .container {
@@ -23,6 +38,7 @@
 
 .dark_bg {
   background-color: #000000;
+  border-radius: 0 0 10px 10px;
 }
 
 body {
@@ -98,6 +114,7 @@ body main .banner .title {
 }
 
 body main .banner p {
+  text-align: center;
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
@@ -107,10 +124,8 @@ body main .banner p {
 body .questions {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  -ms-grid-rows: (1fr)[3];
-      grid-template-rows: repeat(3, 1fr);
+  -ms-grid-columns: (minmax(450px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
 }
 
 body .questions .question {
@@ -168,5 +183,97 @@ body .questions :nth-child(6) {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+body .feat_sec {
+  color: #E8E7EE;
+  padding: 60px 0;
+  margin-bottom: 13px;
+  border-radius: 10px;
+}
+
+body .feat_sec h1 {
+  text-transform: capitalize;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 54px;
+  margin-bottom: 13px;
+  padding: 0 29px;
+}
+
+body .feat_sec .features {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(450px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+}
+
+body .feat_sec .features .feature {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 41px;
+  padding: 13px 29px;
+}
+
+body .feat_sec .features .feature .features_icon {
+  width: 30px;
+  height: 22px;
+  margin-right: 13px;
+}
+
+body footer {
+  background-color: #000000;
+  color: #E8E7EE;
+  padding: 18px 0;
+  margin-bottom: 20px;
+}
+
+body footer .footer_sec {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+body footer .footer_sec .call_to_action p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+body footer .footer_sec .call_to_action p .oval {
+  width: 28px;
+  height: 21px;
+  margin-right: 10px;
+}
+
+body footer .footer_sec .call_to_action p a {
+  padding-left: 5px;
+  -webkit-transition: color 200ms ease-in-out;
+  transition: color 200ms ease-in-out;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
+body footer .footer_sec .call_to_action p a:hover {
+  color: #84CCE3CC;
+}
+
+@media (max-width: 1000px) {
+  body main .banner {
+    height: 341px;
+  }
+  body main .banner .title {
+    font-size: 40px;
+    line-height: 50px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
