--- a/css/style.scss
+++ b/css/style.scss
@@ -1,14 +1,37 @@
 @font-face {
 	font-family: "satoshi";
-	src: url(./Fonts/Variable/Satoshi-Variable.ttf);
+	src: url(../Fonts/Variable/Satoshi-Variable.ttf);
 }
 
+// GENERAL RULES 
 *{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
+a{
+	text-decoration: none;
+	color: #E8E7EE;
+
+}
+
+button{
+	cursor: pointer;
+	transition: scale 200ms ease-in-out;
+	&:hover{
+		scale: 1.1;
+	}
+}
+
+// MEDIA QUERIES 
+$breakpoints: (
+	"xs": 0,
+	"sm": 480px,
+	"md": 720px,
+	"lg": 960px,
+	"xl": 1200px,
+);
 
 .container{
 	margin:  auto 38px;
@@ -23,6 +46,7 @@
 
 .dark_bg{
 	background-color: #000000;
+	border-radius: 0 0 10px 10px ;
 }
 
 body{
@@ -82,6 +106,7 @@ body{
 				text-align: center;
 			}
 			p{
+				text-align: center;
 				font-size: 16px;
 				font-weight: 400;
 				line-height: 22px;
@@ -94,8 +119,9 @@ body{
 	// questions
 	.questions{
 		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows:repeat(3, 1fr);
+		grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+
+		// grid-template-rows:repeat(3, 1fr);
 		.question{
 			margin-top: 1px;
 			background: #F3F5F7;
@@ -141,4 +167,87 @@ body{
 		}
 	}
 
+	// features  
+	.feat_sec{
+		color: #E8E7EE;			
+		padding: 60px 0;
+		margin-bottom: 13px;
+		border-radius: 10px;
+		h1{
+			text-transform: capitalize;
+			font-weight: 900;
+			font-size: 40px;
+			line-height: 54px;
+			margin-bottom: 13px;
+			padding: 0 29px;
+		}
+		.features{
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+
+			.feature{
+				font-weight: 500;
+				font-size: 30px;
+				line-height: 41px;
+				padding: 13px 29px;
+				.features_icon{
+					width: 30px;
+					height: 22px;
+					margin-right: 13px;
+				}
+			}
+		}
+	}
+
+	// footer
+	footer{
+		background-color: #000000;
+		color: #E8E7EE;
+		padding: 18px 0;
+		margin-bottom: 20px;
+		.footer_sec{
+			display: flex;
+			justify-content: space-between;
+			.call_to_action{
+				p{
+					display: flex ;
+					align-items: center;
+					font-weight: 700;
+					font-size: 12px;
+					line-height: 16px;
+					.oval{
+						width: 28px;
+						height: 21px;
+						margin-right: 10px;
+					}
+					a{
+						padding-left: 5px;
+						transition: color 200ms ease-in-out;
+						font-size: 12px;
+						font-weight: lighter;
+						&:hover{
+							color: #84CCE3CC;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+
+@media (max-width: 1000px){
+	body {
+		main{
+			.banner{
+				height: 341px;
+				.title{
+					// color: red;
+					// font-weight: 900;
+					font-size: 40px;
+					line-height: 50px;
+				}
+			}
+		}
+	}
 }
